--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.content-div {
+    background: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 250px;
+    
+}
+
+.content-div:hover {
+background-image: linear-gradient(
+to right,
+rgba(255, 255, 255, 0.8),
+rgba(204, 222, 242, 0.8)
+)!important;
+}
