--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,16 @@
 @tailwind utilities;
 
 .content-div {
-    background: no-repeat;
-    background-size: cover;
-    background-position: center;
-    height: 250px;
-    
+  background: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 250px;
 }
 
 .content-div:hover {
-background-image: linear-gradient(
-to right,
-rgba(255, 255, 255, 0.942),
-rgba(52, 72, 174, 0.264)
-
-)!important;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.942),
+    rgba(57, 78, 183, 0.46)
+  ) !important;
 }
