finishing sm screen

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,21 @@
 }
  */
 
+ .custom-button {
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1); /* Smooth transition */
+}
+
+.custom-button:hover,
+.custom-button:focus-visible {
+  outline: none;
+  box-shadow: 10px 10px 0 0 var(--text-secondary); /* Same color as the border */
+  transform: translate(-5px, -5px); /* Moves the button up and to the left */
+}
+
+.custom-button:after {
+  display: none !important;
+}
+
 
 
 
