changing page and uploading

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   --bg-primary: #0a192fb2;
-  --bg-secondary:#111f4d:
+  --bg-secondary:#111f4d;
   --text-primary: #6b7280;
   --text-secondary:#4795f4;
   --text-header:white;
